Rails 3.0.0 [Release Candidate] (unreleased)*

* Removed textilize, textilize_without_paragraph and markdown helpers. [Santiago Pastorino]

*Rails 3.0.0 [beta 4] (June 8th, 2010)*

* Remove middleware laziness [José Valim]

* Make session stores rely on request.cookie_jar and change set_session semantics to return the cookie value instead of a boolean. [José Valim]

* OAuth 2: HTTP Token Authorization support to complement Basic and Digest Authorization.  [Rick Olson]

* Fixed inconsistencies in form builder and view helpers #4432 [Neeraj Singh]

* Both :xml and :json renderers now forwards the given options to the model, allowing you to invoke them as render :xml => @projects, :include => :tasks [José Valim, Yehuda Katz]

* Renamed the field error CSS class from fieldWithErrors to field_with_errors for consistency.  [Jeremy Kemper]

* Add support for shorthand routes like /projects/status(.:format)  #4423 [Diego Carrion]

* Changed translate helper so that it doesn’t mark every translation as safe HTML. Only keys with a "_html" suffix and keys named "html" are considered to be safe HTML. All other translations are left untouched. [Craig Davey]


*Rails 3.0.0 [beta 3] (April 13th, 2010)*

* New option :as added to form_for allows to change the object name. The old <% form_for :client, @post %> becomes <% form_for @post, :as => :client %> [spastorino]

* Removed verify method in controllers. [JV]
  It's now available as a plugin at http://github.com/rails/verification

* Removed input, form, error_messages_for and error_message_on from views. [JV]
  It's now available as a plugin at http://github.com/rails/dynamic_form

* Routes can be scoped by controller module. [Jeremy Kemper]

    # /session => Auth::SessionsController
    scope :module => 'auth' do
      resource :session
    end

* Added #favicon_link_tag, it uses #image_path so in particular the favicon gets an asset ID [fxn]
